# libblepp

./: .gitignore  ATT.txt  CMakeLists.txt  COPYING  Makefile  Makefile.in  Notes.txt  README  README.md  att.c  att.h  att_gatt.h  att_pdu.h  blelogger.cc  bluetooth.cc  configure  configure.ac  cxxgplot.h  get_attrs.sh  glove_control.cc  hex2ascii.awk  lescan.cc  lescan_simple.cc  libblepp.pc.in  logging.h  temperature.cc  xtoa.h
blepp/: att.h  att_pdu.h  bledevice.h  blestatemachine.h  float.h  gap.h  lescan.h  logging.h  pretty_printers.h  uuid.h  xtoa.h
examples/: blelogger.cc  bluetooth.cc  lescan.cc  primary_service_names.cc  read_device_name.cc  write.cc
lib/: uuid.h
libattgatt/: att.h  att_pdu.h  bledevice.h  blestatemachine.h  float.h  logging.h  pretty_printers.h  uuid.h  xtoa.h
libblepp/: att.h  att_pdu.h  bledevice.h  blestatemachine.h  float.h  gap.h  logging.h  pretty_printers.h  xtoa.h
m4/: ax_cxx_compile_stdcxx_14.m4
packaging/: libblepp.pc.in
src/: att.c  att.cc  att_pdu.cc  bledevice.cc  blestatemachine.cc  float.cc  lescan.cc  logging.cc  pretty_printers.cc  uuid.c  uuid.cc
tests/: test_scan.cc
